# maratona-animeitor-rust

./: .dockerignore  .env  .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  Makefile.toml  NOTES.md  README.md  Secret.toml  abrir_tmux.rb  client-nginx.conf  client.Dockerfile  docker-compose-contest-sedes.yaml  docker-compose.yaml  naquadah.Makefile  recompile_client.sh  republish.sh  run_1st_phase.sh  run_all_reveleitors.sh  run_reveleitor.sh  run_tmux.sh  service.yaml  tmux.conf
ccl/: .env  (+1 more)
cli/: Cargo.toml
cli/src/: lib.rs  test_revelation.rs
cli/src/bin.rs/: convert_tab_to_toml.rs
client/: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  everything.html  everything2.html  index.html  recompile_client.sh  reveleitor.html  stepping.html  teams.html
client-v2/: Cargo.toml  index.html
client-v2/bucket/: client-v2-aaf0a56adfc2a6fc.js  client-v2-aaf0a56adfc2a6fc_bg.wasm  index.html  user-styles.css
client-v2/naquadah/: client-v2-17cfdd3175aa52a7.js  client-v2-17cfdd3175aa52a7_bg.wasm  client-v2-2ef73a5a980b9473.js  client-v2-2ef73a5a980b9473_bg.wasm  client-v2-3745e805f864b14_bg.wasm  client-v2-40d773c24bd491ef.js  client-v2-40d773c24bd491ef_bg.wasm  client-v2-41282206cece6d4f.js  client-v2-41282206cece6d4f_bg.wasm  client-v2-45b3e16d74c0d0a2.js  client-v2-45b3e16d74c0d0a2_bg.wasm  client-v2-5acbacf7fd5de7ea.js  client-v2-5acbacf7fd5de7ea_bg.wasm  client-v2-9e279ef39260783f.js  client-v2-9e279ef39260783f_bg.wasm  client-v2-a7ed8970b3e9f107_bg.wasm  client-v2-c168b8a6cafd7b7.js  client-v2-c168b8a6cafd7b7_bg.wasm  client-v2-c41a167af6978564_bg.wasm  client-v2-c46ac6dc8392f3ed.js  client-v2-c46ac6dc8392f3ed_bg.wasm  client-v2-c5bb9e7700caddca.js  client-v2-c5bb9e7700caddca_bg.wasm  client-v2-e31c0173e12dc7e3.js  client-v2-e31c0173e12dc7e3_bg.wasm  client-v2-efbe4886162d4d0e.js  client-v2-efbe4886162d4d0e_bg.wasm  client-v2-f996df8b8f8370dc_bg.wasm  client-v2-fe88acbb886fc729.js  client-v2-fe88acbb886fc729_bg.wasm  index.html
client-v2/release/: audio-3e7f5b95d323dadb.css  audio-f8271a4d52f1e02c.css  balloons-5fe069752bcbc7ec.css  client-v2-138cca886493ee31.js  client-v2-138cca886493ee31_bg.wasm  client-v2-194cceb0d54f9d8b.js  client-v2-194cceb0d54f9d8b_bg.wasm  client-v2-1d423aeae99f544a.js  client-v2-1d423aeae99f544a_bg.wasm  client-v2-21238f4db1e1d6fd.js  client-v2-21238f4db1e1d6fd_bg.wasm  client-v2-2501abf17a1c306b.js  client-v2-2501abf17a1c306b_bg.wasm  client-v2-2989e5d0fe56d2f7.js  client-v2-2989e5d0fe56d2f7_bg.wasm  client-v2-380a85b060d3e9bd.js  client-v2-380a85b060d3e9bd_bg.wasm  client-v2-38ba3467d7e02567.js  client-v2-38ba3467d7e02567_bg.wasm  client-v2-3937a3e8ed1d445c.js  client-v2-3937a3e8ed1d445c_bg.wasm  client-v2-39a866a6a587acd9.js  client-v2-39a866a6a587acd9_bg.wasm  client-v2-3ad4eca2fff67c98.js  client-v2-3ad4eca2fff67c98_bg.wasm  client-v2-3b4cdd92c5b8e6ae.js  client-v2-3b4cdd92c5b8e6ae_bg.wasm  client-v2-3c0c0c34fa399353.js  client-v2-3c0c0c34fa399353_bg.wasm  client-v2-466515aef0193d4e.js  client-v2-466515aef0193d4e_bg.wasm  client-v2-4a2107d53fb750e8.js  client-v2-4a2107d53fb750e8_bg.wasm  client-v2-4afb53e58762119.js  client-v2-4afb53e58762119_bg.wasm  client-v2-4e7d24eaf5ae85bd.js  client-v2-4e7d24eaf5ae85bd_bg.wasm  client-v2-55e7a978b2a5544f.js  client-v2-55e7a978b2a5544f_bg.wasm  client-v2-6ae25da13191d6d3.js  (+104 more)
client-v2/src/: config.rs  contest.rs  lib.rs  main.rs  runs.rs  timer.rs  websocket_signal.rs  websocket_stream.rs  ws_component.rs
client-v2/src/api/: mod.rs
client-v2/src/model/: contest_signal.rs  mod.rs  runs_panel_signal.rs  team_signal.rs
client-v2/src/net/: mod.rs  request_signal.rs  websocket_stream.rs
client-v2/src/views/: animeitor_v3.rs  background_color.rs  compress_placements.rs  config.rs  contest.rs  control_scrolling.rs  countdown.rs  global_settings.rs  main.rs  mod.rs  navigation.rs  photos.rs  placement.rs  problem.rs  reveleitor.rs  runs.rs  runs_panel.rs  sedes.rs  team_media.rs  team_name.rs  team_score_line.rs  timer.rs
client-v2/static/: audio.css  balloons.css  styles.css  user-styles.css
client/src/: automatic.rs  countdown.rs  helpers.rs  lib.rs  navigation.rs  requests.rs  reveleitor.rs  runs.rs  sede.rs  stepping.rs  teams.rs  timer.rs  views.rs
client/static/: navigation.html  package-lock.json  scoreboard.html  styles.css
client/www/: automatic.html  countdown.html  everything.html  everything2.html  index.html  navigation.html  reveleitor.html  runspanel.html  teams.html  timer.html
client/www/static/: balloons.css  styles-chroma.css  styles-transparent.css  styles.css
data/: Cargo.toml  Makefile.toml
data/src/: config.rs  configdata.rs  lib.rs  revelation.rs  turb.rs
lib-server/: Cargo.toml  Makefile.toml
lib-server/src/: dataio.rs  lib.rs  main.rs  maratona.rs  simples.rs
lib-server/static/: .gitignore  runPanel.js  scoreboard.js
lib-server/test/webcast_zip_1a_fase_2020/: runs
server/: .gitignore  .spectral.yaml  1_5152420953589810181  Cargo.toml  Dockerfile  Makefile  NOTES.md  README.md  docker-compose-contest-sedes-icpc-la-2023.yaml  openapi.json  run_2nd_phase.sh
server/cli/: Cargo.toml
server/cli/src/: lib.rs  test_revelation.rs
server/config/: ICPC_LA.toml  Regional_2023_Bolivia_CCL.toml  Regional_2023_Brasil.toml  Regional_2023_Brasil_CCL.toml  Teams.toml
server/data/: Cargo.toml
server/game/: Cargo.toml
server/membroadcast/: Cargo.toml
server/photos/: .gitignore
server/regex_set_field/: Cargo.toml
server/sdk/: Cargo.toml
server/server/: Cargo.toml
server/server-v2/: Cargo.toml
server/server-v3/: Cargo.toml
server/service/: Cargo.toml
server/sounds/: .gitignore
server/src/: assets.rs  config.rs  dataio.rs  dbupdate.rs  errors.rs  lib.rs  membroadcast.rs  metrics.rs  routes.rs  runs.rs  secret.rs  server.rs  simples.rs  timer.rs  webcast.rs  websockets.rs
service/: Cargo.toml
service/src/: dataio.rs  errors.rs  lib.rs  webcast.rs
turbineitor/: .env  Cargo.toml  Makefile.toml
turbineitor/src/: auth.rs  errors.rs  helpers.rs  lib.rs  main.rs  models.rs  server.rs
turbineitor/ui/: Cargo.toml  index.html
(+263 files in other folders)
