[package]
name = "rustrimeitor"
version = "0.2.0"
authors = ["Emilio Wuerges <wuerges@gmail.com>"]
edition = "2021"

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "~1.18", features = ["full"] }
clap = "2.33.3"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[dependencies.server]
path = "server"

[dependencies.data]
path = "data"

[workspace]
members = ["server", "data"]

[profile.release.package.client]
opt-level = 'z'
codegen-units = 1
