[workspace]
members = ["server", "data", "cli", "service"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["Emilio Wuerges <wuerges@gmail.com>"]

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
futures = "0.3"
