[workspace]
members = ["server", "data", "cli", "service"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["Emilio Wuerges <wuerges@gmail.com>"]

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
futures = "0.3"
tokio = { version = "1.27", features = ["full"] }
warp = "0.3"
rand = "0.8"
toml = "0.7"
html-escape = "0.2"
parking_lot = "0.12"
warp-embed = "0.4"
rust-embed = "6.6"
openssl = { version = "0.10", features = ["vendored"] }
sentry = "0.30.0"
autometrics = { version = "0.2.4", features = [
    "prometheus-exporter",
    "metrics",
] }
prometheus = { version = "0.13.3", features = ["process"] }
metrics = "0.20.1"
metrics-prometheus = "0.3.1"
zip = "0.6"
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-tls = "0.5"
data = { path = "../data" }
