[package]
name = "cli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "~1.18", features = ["full"] }
clap = "2.33.3"
data = { path = "../data" }
server = { path = "../server" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
