[package]
name = "client"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
seed = "0.9"
rand.workspace = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[dependencies.data]
path = "../data"

