[package]
name = "client"
version = "0.6.0"
edition = "2021"
authors = ["Emilio Wuerges <wuerges@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
seed = "0.9"
rand = "0.8"
data = { path = "../server/data" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']


