[package]
name = "data"
version = "0.1.1"
authors = ["Emilio Wuerges <wuerges@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
