[package]
name = "lib-server"
version = "0.1.0"
authors = ["Emilio Wuerges <wuerges@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4.3"
tokio = { version = "0.2", features = ["full"] }
zip = "0.5.8"
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
itertools = "0.9.0"


[[bin]]
name = "simples"
path = "src/simples.rs"

[[bin]]
name = "maratona"
path = "src/maratona.rs"

[dependencies.maratona_animeitor_rust]
path = ".."