[package]
name = "service"
version = "0.3.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
tokio = { version = "~1.18", features = ["full"] }
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
itertools = "0.10"
toml = "0.5"
futures = "0.3"
html-escape = "0.2"
parking_lot = "0.12"
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-tls = "0.5"
data = { path = "../data" }
