[package]
name = "service"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1.27", features = ["full"] }
zip = "0.6"
rand = "0.8"
toml = "0.7"
html-escape = "0.2"
parking_lot = "0.12"
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-tls = "0.5"
data = { path = "../data" }
thiserror.workspace = true 
serde.workspace = true 
serde_json.workspace = true 
itertools.workspace = true 
futures.workspace = true 
