[package]
name = "turbineitor"
version = "0.1.0"
authors = ["Emilio Wuerges <wuerges@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["full"] }
sha2 = "0.9.2"
hmac = "0.10.1"
jsonwebtoken = "7"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
hyper = "0.13"
hyper-tls = "0.4.3"
warp = "0.2"
rand = "0.7.3"
itertools = "0.9.0"
r2d2 = "0.8.9"
clap = "2.33.3"
futures = "0.3"

[dependencies.data]
path = "../data"

[dependencies.server]
path = "../server"