[package]
name = "cli"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
color-eyre.workspace = true
url.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
openssl-sys = { optional = true, version = "*" }

data = { path = "../data" }
service = { path = "../service" }
server = { path = "../server" }
server-v2 = { path = "../server-v2" }

[dev-dependencies]
rstest = "0.16"
quickcheck = "1"
quickcheck_macros = "1"

[features]
slow_tests = []
vendored = ["openssl-sys/vendored"]
