[package]
name = "cli"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
color-eyre.workspace = true
url.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
openssl-sys = { optional = true, version = "*" }

data.workspace = true
service.workspace = true
server-v2.workspace = true
server-v3.workspace = true

[dev-dependencies]
rstest.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true

[features]
slow_tests = []
vendored = ["openssl-sys/vendored"]
