[package]
name = "sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
thiserror.workspace = true
itertools.workspace = true
serde_with.workspace = true
strum.workspace = true
regex_set_field.workspace = true
utoipa.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
assert2.workspace = true
