[package]
name = "server-v2"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
actix-ws = "0.2"
tracing-actix-web = "0.7"
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
color-eyre.workspace = true
tracing.workspace = true
autometrics.workspace = true

service = { path = "../service" }
data = { path = "../data" }
