[package]
name = "server-v2"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
actix-ws.workspace = true
tracing-actix-web.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
color-eyre.workspace = true
tracing.workspace = true
autometrics.workspace = true
thiserror.workspace = true
futures.workspace = true
tokio-stream.workspace = true
rand.workspace = true

service.workspace = true
data.workspace = true
