[package]
name = "service"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
zip.workspace = true
rand.workspace = true
toml.workspace = true
html-escape.workspace = true
parking_lot.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
futures.workspace = true
sentry.workspace = true
metrics.workspace = true
futures-signals = "0.3"

data = { path = "../data" }
